--- a/server/.env
+++ b/server/.env
@@ -4,8 +4,8 @@ MONGO_URI=mongodb+srv://arshad:12345@cluster0.vjoqxwq.mongodb.net/
 JWT_SECRET=1
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=shaikh.mg@gmail.com
-EMAIL_PASS=bjms dgbt xsmj uthn
+EMAIL_USER=arshadmiya34@gmail.com
+EMAIL_PASS=tntm guxm hyvs ppyx
 
 JWT_EXPIRES_IN=7d
 
